--- a/assets/styles/app.css
+++ b/assets/styles/app.css
@@ -1,3 +1,67 @@
+* {
+    padding: 0;
+    margin: 0;
+    box-sizing: border-box;
+}
+
 body {
     background-color: skyblue;
+    width: 100vw;
+    height: 100vh;
+    display: flex;
+
+}
+
+.wrapper {
+    width: 100vw;
+    height: 100vh;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-content: center;
+    text-align: center;
+}
+
+.form-wrapper > div{
+    width: 500px;
+    margin: auto;
+}
+
+.form-wrapper input{
+    width: 260px;
+    padding: 5px;
+    margin: 5px 0;
+    background: none;
+    border: none;
+    border-bottom: 2px solid black;
+    border-radius: 0 0 10px 10px;
+}
+.form-wrapper form{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    border: 2px solid black;
+    border-radius: 30px 5px 30px 5px;
+    padding: 30px 10px;
+    box-shadow: inset 0 0 10px black;
+}
+
+.form-wrapper form div{
+    width: 400px;
+    display: flex;
+    justify-content: space-between;
+}
+
+.form-wrapper form > div:nth-child(6){
+    display: flex;
+    width: 80%;
+}
+
+.form-wrapper form > div:nth-child(6) input[type="checkbox"]{
+    margin-right: 60%;
+    width: auto;
+}
+
+.form-wrapper button{
+    padding: 10px 30px;
 }
