--- a/templates/ducks/show.html.twig
+++ b/templates/ducks/show.html.twig
@@ -3,13 +3,14 @@
 {% block title %}Ducks{% endblock %}
 
 {% block body %}
+
     <h1>Ducks</h1>
 
     <table class="table">
         <tbody>
             <tr>
-                <th>Id</th>
-                <td>{{ duck.id }}</td>
+                <th>Duckname</th>
+                <td>{{ duck.duckname }}</td>
             </tr>
             <tr>
                 <th>Email</th>
@@ -31,4 +32,5 @@
     <a href="{{ path('app_ducks_edit', {'id': duck.id}) }}">edit</a>
 
     {{ include('ducks/_delete_form.html.twig') }}
+
 {% endblock %}
