--- a/templates/quack/edit.html.twig
+++ b/templates/quack/edit.html.twig
@@ -3,11 +3,21 @@
 {% block title %}Edit Quack{% endblock %}
 
 {% block body %}
-    <h1>Edit Quack</h1>
+    <div class="container my-5">
+        <h1 class="text-center mb-4">Edit Quack</h1>
 
-    {{ include('quack/_form.html.twig', {'button_label': 'Update'}) }}
+        <div class="card shadow-sm">
+            <div class="card-body">
+                {{ include('quack/_form.html.twig', {'button_label': 'Update'}) }}
+            </div>
+        </div>
 
-    <a href="{{ path('app_quack_index') }}">back to list</a>
+        <div class="d-flex justify-content-between mt-4">
+            <a href="{{ path('app_quack_index') }}" class="btn btn-secondary">
+                <i class="fas fa-arrow-left"></i> Back to List
+            </a>
 
-    {{ include('quack/_delete_form.html.twig') }}
+            {{ include('quack/_delete_form.html.twig', {'class': 'd-inline'}) }}
+        </div>
+    </div>
 {% endblock %}
