--- a/assets/styles/app.css
+++ b/assets/styles/app.css
@@ -32,5 +32,22 @@ h1 {
 }
 
 input, textarea, select {
-    border-radius: 5px;
+    border-radius: 15px;
+    gap:20px;
+}
+.nav-link.active {
+    font-weight: bold;
+    color: #ffc107 !important;
+}
+
+.offcanvas-header {
+    border-bottom: 1px solid rgba(255, 255, 255, 0.1);
+}
+
+.offcanvas-body ul {
+    padding-left: 0;
+}
+
+.offcanvas-body .nav-item {
+    margin-bottom: 10px;
 }
