--- a/templates/quack/new.html.twig
+++ b/templates/quack/new.html.twig
@@ -3,19 +3,31 @@
 {% block title %}New Quack{% endblock %}
 
 {% block body %}
-    <div class="container my-5">
-        <h1 class="text-center mb-4">Create New Quack</h1>
+    <div class="container py-5">
+        <div class="row justify-content-center">
+            <div class="col-md-8">
+                <!-- Carte contenant le formulaire -->
+                <div class="card shadow border-0">
+                    <div class="card-header bg-light d-flex align-items-center">
+                      <!--  <img src="{{ asset('uploads/default_profile.png') }}" alt="Profile Picture" class="rounded-circle me-3" width="50" height="50">-->
+                        <h5 class="mb-0">Create a New Quack</h5>
+                    </div>
 
-        <div class="card shadow-sm">
-            <div class="card-body">
-                {{ include('quack/_form.html.twig') }}
+                    <div class="card-body">
+                        {{ include('quack/_form.html.twig') }}
+                    </div>
+
+                    <div class="card-footer bg-light d-flex justify-content-between">
+                        <a href="{{ path('app_quack_index') }}" class="btn btn-outline-secondary rounded-pill px-4">
+                            <i class="fas fa-arrow-left"></i> Back to List
+                        </a>
+
+                        <button type="submit" form="quack_form" class="btn btn-primary rounded-pill px-5">
+                            <i class="fas fa-feather-alt"></i> Post Quack
+                        </button>
+                    </div>
+                </div>
             </div>
-        </div>
-
-        <div class="d-flex justify-content-between mt-3">
-            <a href="{{ path('app_quack_index') }}" class="btn btn-secondary">
-                <i class="fas fa-arrow-left"></i> Back to list
-            </a>
         </div>
     </div>
 {% endblock %}
