--- a/templates/quack/_form.html.twig
+++ b/templates/quack/_form.html.twig
@@ -1,6 +1,6 @@
 {{ form_start(form) }}
     {{ form_widget(form) }}
 <button type="submit" class="btn btn-primary btn-lg mt-3">
-    <i class="fas fa-save"></i> {{ button_label|default('Save') }}
+    <i class="fas fa-save"></i> {{ button_label|default('Post Quack') }}
 </button>
 {{ form_end(form) }}
